Bugfix: Fix display issue on iphone Xr

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ button:active{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr ;
+    justify-content: center;
 }
 
 @media all and (max-width: 500px) {
